--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@chaingun/crdt",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Conflict-Free Replicated Data Type functions for ChainGun",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/go1dfish/@chaingun/crdt",
+  "repository": "git+ssh://git@github.com/chain-gun/chaingun-crdt",
   "license": "MIT",
   "keywords": [],
   "scripts": {
@@ -50,7 +50,9 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@chaingun/types": "^0.0.1"
+  },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
@@ -85,7 +87,8 @@
     }
   },
   "prettier": {
-    "singleQuote": true
+    "singleQuote": true,
+    "semi": false
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
